--- a/05_2_react_shop/package.json
+++ b/05_2_react_shop/package.json
@@ -8,7 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -36,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "redux-devtools-extension": "^2.13.9",
     "tailwindcss": "^3.3.3"
   }
 }
